'Thomy | fix overflow'

--- a/we-learn-front/slide/style.scss
+++ b/we-learn-front/slide/style.scss
@@ -17,7 +17,7 @@ $maxLettersStagger: 6;
 $letterStagger: 0.1s;
 
 .slider {
-  overflow: hidden;
+  // overflow: hidden;
   position: relative;
   height: 100vh;
   color: #fff;
@@ -215,7 +215,7 @@ $letterStagger: 0.1s;
       $imageFadeAT: $animTime/4;
 
       &-inner {
-        overflow: hidden;
+        // overflow: hidden;
         position: relative;
         width: 100%;
         height: 100%;
